--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <p>For this school project we had to make a robot that helps people. We made a safe that had a timer and a lock</p>
         </div>
         <div class="project-img">
-          <img src="/img/DUCKER2.png" alt="img">
+          <img src="img/DUCKER2.png" alt="img">
         </div>
       </div>
       <div class="project-item">
@@ -92,7 +92,7 @@
           <p>For this school project we had to make a reservation site for a business. I made a site for a Turkish restaurant, Kumpir Corner. I used HTML, CSS and PHP for the code. It has a working PHP login and CRUD system.</p>
         </div>
         <div class="project-img">
-          <img src="/img/reservation.png" alt="img">
+          <img src="img/reservation.png" alt="img">
         </div>
       </div>
       <div class="project-item">
@@ -102,7 +102,7 @@
           <p>For this school project I made a page for a site about blind people in stores and webshops. I had to work in a team and they wanted to work with Bulma, So I did not work with CSS at all. I worked with HTML, JavaScript, Json and AJAX. We had to make our own API.</p>
         </div>
         <div class="project-img">
-          <img src="/img/blinfo.png" alt="img">
+          <img src="img/blinfo.png" alt="img">
         </div>
       </div>
       <div class="project-item">
@@ -112,7 +112,7 @@
           <p>For this school project they gave us a location in Rotterdam and we had to make a game out of it. We had Park 1943.</p>
         </div>
         <div class="project-img">
-          <img src="/img/game123.png" alt="img">
+          <img src="img/game123.png" alt="img">
         </div>
       </div>
     </div>
@@ -134,7 +134,7 @@
           <p>I have a collection of A3 manga art, I make them of my favorite manga characters. All of them are on my Instagram page.</p>
         </div>
         <div class="project-img">
-          <img src="/img/art/art1.png" alt="img">
+          <img src="img/art/art1.png" alt="img">
         </div>
       </div>
       <div class="project-item">
